--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
       with:
         prerelease: false
         repo_token: ${{ github.token }}
-        title: ${{ steps.version.outputs.version }}
-        automatic_release_tag: ${{ steps.version.outputs.version }}
+        title: v${{ steps.version.outputs.version }}
+        automatic_release_tag: v${{ steps.version.outputs.version }}
         files: |
           target/AntiGamemode.jar
