--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
 
     - name: Read .version file
       id: version
-      run: echo "::set-output name=version::$(cat .github/.version)"
+      run: echo "version=$(cat .github/.version)" >> $GITHUB_OUTPUT
 
     - name: Set up JDK 16
       uses: actions/setup-java@v3
