Update Links and Names
Signed-off-by: Zoey <zoey@z0ey.de>

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>dev.sancraft</groupId>
+    <groupId>de.zoeyvid</groupId>
     <artifactId>anti-gamemode</artifactId>
     <version>0.0.0</version>
     <packaging>jar</packaging>
@@ -15,7 +15,7 @@
         <java.version>16</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    <url>sancraft.dev</url>
+    <url>zoeyvid.de</url>
 
     <build>
         <plugins>
