--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,12 +15,10 @@ jobs:
       id: version
       run: echo "version=$(cat .github/.version)" >> $GITHUB_OUTPUT
 
-    - name: Set up JDK 16
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: '16'
-        distribution: 'temurin'
-        cache: maven
+        java-version: 17
 
     - name: Build with Maven
       run: | 
