--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -40,6 +40,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: 17
+        distribution: corretto
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
