--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,7 @@ jobs:
           path: |
             target/AntiGamemode.jar
       - uses: Kir-Antipov/mc-publish@v3.2
+        if: github.ref == 'refs/heads/main'
         with:
           version-type: release
           github-prerelease: false
